- In order to work with smaller PDFs, the PDF test function now opens to page 3 instead of to page 5.
- At higher screen resolutions, the splitter for the Karma & Nuyen tab now properly starts in the middle of the tab instead of far off to the left.
- Improvements that forcefully allow a skill to be defaulted now work properly.

Data Changes:
- Fixed missing multiplier for Haunted lifestyle quality.
- Fixed missing availability for the BMW Luxus.
- Muscle Augmentation and Muscle Toner now just disable Celerity instead of being forbidden from being bought if the character has Celerity. Fixes #4621.
- Changed Cyberspace Designs Dragonfly (R5) melee autosoft rating to 1.
- Compiling can now properly be chosen for Frostbite.
- Initiative-boosting powers and 'ware now properly disable the defense test bonus given by Lightning Reflexes.
- Synaptic Acceleration now properly adds +1 to defense tests. Known issue: this defense test increase is not disabled if the character buys any initiative-boosting 'ware the way its initiative boost is.
- Two of the Sea Ray Cottonmouth's built-in weapon mounts now properly have Flexible flexibility. Fixes #4656.
- Enabling Delnar Skills Remake no longer causes Chummer to crash, and Delnar Skills Remake has been updated with new changes to Acrobatic Defender and Perceptive Defender.
- Metamagics and echoes acquired outside of initiation and submersion now show up on character sheets that have no initiations or submersions.
- Extended Clip in German Data Changes now properly scales its cost based on the accessory's rating.
- Improved Potential can now properly be taken at multiple levels with German Data Changes.
- Badger Mentor Spirit from SOTG now adds two levels of Perceptive quality rather than 1 level of Perceptive and +2 to Perception.
- Dead SIN now properly gives four fake licenses instead of three. Fixes #4666.