@@ -60,6 +60,7 @@ Application Changes:
 - In order to work with smaller PDFs, the PDF test function now opens to page 3 instead of to page 5.
 - At higher screen resolutions, the splitter for the Karma & Nuyen tab now properly starts in the middle of the tab instead of far off to the left.
 - Improvements that forcefully allow a skill to be defaulted now work properly.
+- Conditional boosts to skills that only boost specific specializations are now always represented in the specialization's dice pool bonus, no matter where it is shown. Fixes #3855.
 
 Data Changes:
 - Fixed missing multiplier for Haunted lifestyle quality.
